samples/map/valid/R18.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicref href="topic.dita" collection-type="family" copy-to="new_topic_name.dita"/>
</map>