samples/map/invalid/R2.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <topicref href="topic.dita" collection-type="family"/>
</map>